example reflects new structure

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from network import create_engine\n",
+    "from pickaxe_generic.engine import create_engine\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "from rdkit.Chem import Draw\n",
@@ -187,7 +187,7 @@
     "mol_list = []\n",
     "# print values of molecules in mol_lib\n",
     "for mol in mol_lib:\n",
-    "    print(mol)\n",
+    "    print(mol.smiles)\n",
     "    mol_list.append(mol.rdkitmol)\n",
     "    #Draw.ShowMol(mol.rdkitmol)\n",
     "# print the reactions (hyperedges) which connect molecules in the network\n",
