--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from network import RxnTrackerSingle\n",
+    "from pickaxe_generic.utils import RxnTrackerSingle\n",
     "tracker = RxnTrackerSingle(rxn_lib)\n",
     "print(len(rxn_lib))\n",
     "n = 0\n",
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from network import RxnTrackerDepthFirst\n",
+    "from pickaxe_generic.utils import RxnTrackerDepthFirst\n",
     "doubletracker = RxnTrackerDepthFirst(rxn_lib)\n",
     "print(len(rxn_lib))\n",
     "n = 0\n",
