--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -15,45 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d916ea81",
-   "metadata": {},
-   "source": [
-    "## Adipic acid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d102b30c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Adipic acid (Pubchem CID: 196)\n",
-    "\n",
-    "ADPA = Chem.MolFromSmiles(\"O=C(O)CCCCC(=O)O\")\n",
-    "ADPA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "824295b5",
-   "metadata": {},
-   "source": [
-    "### C3 Chemistry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47dbb6d7",
-   "metadata": {},
-   "source": [
-    "### Ethyl lactate to Adipic acid"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f2f0aa6a",
@@ -160,18 +121,8 @@
     "# run a single \"generation\", which here means a single cartesian product step\n",
     "strat.expand(num_gens=2)\n",
     "\n",
-    "print(len(mol_lib) - len(mol_smiles))\n",
-    "print(len(rxn_lib))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b532a98",
-   "metadata": {},
-   "source": [
-    "90 products and 120 reactions after 1st generation\n",
-    "\n",
-    "2511 products and 4672 reactions after 2nd generation"
+    "print(f\"{len(mol_lib) - len(mol_smiles)}\" new molecules after 2 generations)\n",
+    "print(f\"{len(mol_lib) - len(mol_smiles)}\" reactions after 2 generations)"
    ]
   },
   {
@@ -181,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Chem.MolFromSmiles(\"O=CCC(O)O\")"
+    "Chem.MolFromSmiles(\"COC(CCC)=C(C)OC(O)C\")"
    ]
   },
   {
@@ -236,7 +187,11 @@
     "doubletracker = RxnTrackerDepthFirst(rxn_lib)\n",
     "print(len(rxn_lib))\n",
     "n = 0\n",
-    "for chain in doubletracker.getParentChains(engine.Mol(\"COC(CCC)=C(C)OC(O)C\").uid,reagent_table=[engine.Mol(smiles).uid for smiles in mol_smiles],max_depth=2):\n",
+    "for chain in doubletracker.getParentChains(\n",
+    "    engine.Mol(\"COC(CCC)=C(C)OC(O)C\").uid,\n",
+    "    reagent_table=[engine.Mol(smiles).uid for smiles in mol_smiles],\n",
+    "    max_depth=2,\n",
+    "):\n",
     "    g = 0\n",
     "    for gen in chain:\n",
     "        print(f\"Generation {g}:\")\n",
