--- a/samples/notebooks/2-molecules-and-operators.ipynb
+++ b/samples/notebooks/2-molecules-and-operators.ipynb
@@ -129,7 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aldol_condensation = engine.op.rdkit(\"[O&+0:1]=[C&+0:2]-[C&+0;H2,H3:3].[C&+0:4]=[O&+0:5]>>[*:1]=[*:2]-[*:3]=[*:4].[*:5]\")"
+    "aldol_condensation = engine.op.rdkit(\n",
+    "    \"[O&+0:1]=[C&+0:2]-[C&+0;H2,H3:3].[C&+0:4]=[O&+0:5]>>[*:1]=[*:2]-[*:3]=[*:4].[*:5]\"\n",
+    ")"
    ]
   },
   {
@@ -146,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aldol_condensation(acetone,acetone)"
+    "aldol_condensation(acetone, acetone)"
    ]
   },
   {
