--- a/samples/notebooks/2-molecules-and-operators.ipynb
+++ b/samples/notebooks/2-molecules-and-operators.ipynb
@@ -164,7 +164,7 @@
     "2. Molecules obtained via `engine.mol.rdkit` wrap an RDKit-style molecule using Daylight SMILES syntax.\n",
     "3. Operators obtained via `engine.op.rdkit` wrap an RDKit-style template-based operator using Daylight Reaction SMARTS syntax.\n",
     "\n",
-    "Congratulations!  You have finished the second part of the Pickaxe-Generic tutorial.  Proceed to the [next part](./3-writing-operators.md) to learn some nuances of writing operators in the RDKit style."
+    "Congratulations!  You have finished the second part of the Pickaxe-Generic tutorial.  Proceed to the [next part](./3-writing-operators.ipynb) to learn some nuances of writing operators in the RDKit style."
    ]
   }
  ],
