--- a/tutorial/jupyter/7-metadata.ipynb
+++ b/tutorial/jupyter/7-metadata.ipynb
@@ -118,7 +118,7 @@
     "pprint(\n",
     "    [\n",
     "        (i, v[0], v[1])\n",
-    "        for i, v in enumerate(zip(network.mols, network.mols.meta(keys=[\"mw\"])))\n",
+    "        for i, v in enumerate(zip(network.mols, network.mols.meta(keys=[\"mw\"]), strict=False))\n",
     "    ]\n",
     ")"
    ]
@@ -166,7 +166,7 @@
     "    [\n",
     "        (i, v[0], v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\"]))\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"gen\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -220,7 +220,7 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]))\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -321,7 +321,7 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]))\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -364,7 +364,7 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]))\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
