--- a/tutorial/jupyter/8-global-hooks.ipynb
+++ b/tutorial/jupyter/8-global-hooks.ipynb
@@ -96,7 +96,7 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network_no_hook.mols, network_no_hook.mols.meta(keys=[\"gen\"]))\n",
+    "            zip(network_no_hook.mols, network_no_hook.mols.meta(keys=[\"gen\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -114,7 +114,7 @@
     "        for i, v in enumerate(\n",
     "            zip(\n",
     "                network_with_hook.mols,\n",
-    "                network_with_hook.mols.meta(keys=[\"gen\"]),\n",
+    "                network_with_hook.mols.meta(keys=[\"gen\"]), strict=False,\n",
     "            )\n",
     "        )\n",
     "    ]\n",
@@ -159,7 +159,7 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\"]))\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"gen\"]), strict=False)\n",
     "        )\n",
     "    ]\n",
     ")"
