--- a/tutorial/jupyter/7-metadata.ipynb
+++ b/tutorial/jupyter/7-metadata.ipynb
@@ -118,7 +118,9 @@
     "pprint(\n",
     "    [\n",
     "        (i, v[0], v[1])\n",
-    "        for i, v in enumerate(zip(network.mols, network.mols.meta(keys=[\"mw\"]), strict=False))\n",
+    "        for i, v in enumerate(\n",
+    "            zip(network.mols, network.mols.meta(keys=[\"mw\"]), strict=False)\n",
+    "        )\n",
     "    ]\n",
     ")"
    ]
@@ -220,7 +222,11 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
+    "            zip(\n",
+    "                network.mols,\n",
+    "                network.mols.meta(keys=[\"gen\", \"waste\"]),\n",
+    "                strict=False,\n",
+    "            )\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -321,7 +327,11 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
+    "            zip(\n",
+    "                network.mols,\n",
+    "                network.mols.meta(keys=[\"gen\", \"waste\"]),\n",
+    "                strict=False,\n",
+    "            )\n",
     "        )\n",
     "    ]\n",
     ")"
@@ -364,7 +374,11 @@
     "    [\n",
     "        (i, v[0].smiles, v[1])\n",
     "        for i, v in enumerate(\n",
-    "            zip(network.mols, network.mols.meta(keys=[\"gen\", \"waste\"]), strict=False)\n",
+    "            zip(\n",
+    "                network.mols,\n",
+    "                network.mols.meta(keys=[\"gen\", \"waste\"]),\n",
+    "                strict=False,\n",
+    "            )\n",
     "        )\n",
     "    ]\n",
     ")"
